--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,16 @@
             <artifactId>msgpack</artifactId>
             <version>0.6.12</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.marshalling</groupId>
+            <artifactId>jboss-marshalling-serial</artifactId>
+            <version>2.0.6.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
